Added The Source

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -7,6 +7,12 @@ video, iframe {
   margin: auto;
 }
 
+.theme-default-content {
+    img {
+      display: flex;
+      margin: auto;
+    }
+}
 
 .theme-container.homepage {
 
