--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -12,6 +12,9 @@ video, iframe {
       display: flex;
       margin: auto;
     }
+    figcaption {
+      text-align: center;
+    }
 }
 
 .theme-container.homepage {
