Major homepage facelift

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -1,5 +1,10 @@
 body, html, #app {
   height: 100%;
+  font-family: 'Helvetica';
+}
+
+pre, code {
+  font-family: Hack, monospace;
 }
 
 video, iframe {
