--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -22,6 +22,34 @@ video, iframe {
     }
 }
 
+.danger {
+  margin-bottom: 15px;
+  padding: 4px 12px;
+  background-color: #ffdddd;
+  border-left: 6px solid #f44336;
+}
+
+.success {
+  margin-bottom: 15px;
+  padding: 4px 12px;
+  background-color: #ddffdd;
+  border-left: 6px solid #4CAF50;
+}
+
+.info {
+  margin-bottom: 15px;
+  padding: 4px 12px;
+  background-color: #e7f3fe;
+  border-left: 6px solid #2196F3;
+}
+
+.warning {
+  margin-bottom: 15px;
+  padding: 4px 12px;
+  background-color: #ffffcc;
+  border-left: 6px solid #ffeb3b;
+}
+
 .theme-container.homepage {
 
   height: 100%;
