--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -13,6 +13,10 @@ video, iframe {
 }
 
 .theme-default-content {
+    h1, h2, h3, h4, h5, h6 {
+      padding-bottom: 1rem;
+      border-bottom: none;
+    }
     img {
       display: flex;
       margin: auto;
